change from placeholder text to resume version 1 text.  Add link for pdf resume

--- a/index.html
+++ b/index.html
@@ -1,170 +1,167 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Jen's Professional Site</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Jen's Professional Site</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+  <body>
+    <table class="header" cellspacing="20">
+      <tr>
+        <td>
+          <img
+            src="Herr-profile.png"
+            alt="Jen's Profile Picture"
+            width="250"
+            height="250"
+          />
+        </td>
+        <td>
+          <h1>Jennifer Herr</h1>
+          <em>Public Safety Professional</em>
+        </td>
+      </tr>
+    </table>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Herr-profile.png" alt="Jen's Profile Picture" width="250" height="250"></td>
-      <td>
-        <h1>Jennifer Herr</h1>
-        <em>Public Safety Professional</em>
-        <p>This website is a work in progress as I learn web development. Enjoy!</p>
-      </td>
-    </tr>
-  </table>
+    <hr />
+    <p>
+      Jennifer is a Public Safety Professional with 15 years of progressive
+      experience as a 911 call receiver, police dispatcher, police officer, and
+      detective. She is the co-founder and Lead Advisor of a volunteer youth
+      development program which has 15 teenage particpants and 6 adult advisors.
+      She recently completed the Google Project Management Professional
+      Certificate through Coursera as a first step to career change, and is now
+      working on learning skills to become a front end web developer.
+    </p>
 
-  <hr>
-  <p>
-    Jennifer is a Public Safety Professional with 15 years of progressive experience as a 911 call receiver, police dispatcher, police officer, and detective.
-    She is the co-founder and Lead Advisor of a youth development program which has 15 teenage particpants and 6 adult advisors.
-    She recently completed the Google Project Management Professional Certificate through Coursera
-    and will soon take the Associate Project Manager Certification (APM) test through the Project Management Institute (PMI).
-    She is currently learning front end web development.
-    Her goal is to transition into a career that allows her to continue helping others with a company that values empathy, equity, inclusion, innovation, and progress.
-    She has a passion for gaming, education, and technology.
-    She lives in the Greater Seattle area and is open to remote, office, or hybrid work, and is available for shift work and working weekends in addition to standard working hours.
-  </p>
-  <hr>
-  <h3>Professional Experience</h3>
+    <p>
+      Jennifer's goal is to transition into a career that allows her to continue
+      helping others and bettering society. She is looking to work for a company
+      that values empathy, equity, inclusion, innovation, and positive progress.
+      She loves learning and is hungry for knowledge and self improvement. She
+      has a passion for gaming, education, and technology. She lives in the
+      Greater Seattle area and is open to remote, office, or hybrid work.
+      Additionally, she is available for shift work, odd work hours, and working
+      weekends. She is also open to up to 75% travel.
+    </p>
+    <hr />
+    <h2>Professional Experience</h2>
 
-  <h4>King County Sheriff's Office - 2006 - Present</h4>
+    <h3>King County Sheriff's Office - 2006 - Present</h3>
 
-  <ul>
-    <li>Deputy Sheriff - 2010 - Present</li>
-    <li>Detective - 2016 - 2020</li>
-    <li>Program Manager - Sammamish Police Explorers 2018 - Present</li>
-    <li>911 Operator - 2006 - 2010</li>
-  </ul>
-  <hr>
-
-  <h3>Education</h3>
-
-  <ul>
-    <li>
-      <a href="https://www.regis.edu/">Regis University,</a> Denver, CO: Master of Science, Criminology
-      <ul>
-        <li>Graute Honors, 4.0 GPA</li>
-        <li>12 hours graduate coursework and research in Leadership Studies</li>
-        <li>Completed 50 page quantitative research study investigating effects of public perception on police motivation</li>
-      </ul>
-    </li>
-    <li>
-      <a href="http://plannedmaintenance.wwu.edu/">Western Washington Univesrity,</a> Bellingham, WA: Bachelor of Arts, Psychology
-    </li>
-  </ul>
-
-  <h4>Continuing Education</h4>
-
-  <ul>
-    <li>Google Project Management Professional Certificate, Coursera, 2022</li>
     <ul>
-      <li>100 hours towards PMP certifications</li>
+      <li>Deputy Sheriff - 2010 - Present</li>
+      <li>Detective - 2016 - 2020</li>
+      <li>Program Manager - Sammamish Police Explorers 2018 - Present</li>
+      <li>911 Operator - 2006 - 2010</li>
     </ul>
-    <li>Washington State Basic Law Enforcement Academy, 2010
-      <ul>
-        <li>POST Certification</li>
-        <li>720 Hours of coursework and practical application</li>
-      </ul>
-    </li>
-  </ul>
-  <hr>
+    <hr />
 
-  <h3>Hobbies</h3>
+    <h2>Education</h2>
 
-  <ol>
-    <li>Gaming:
-      <ul>
-        <li>Computer and Console Games</li>
-        <li>Board Games</li>
-        <li>Tabletop Games</li>
-        <li>Sports</li>
-        <li>Puzzles and Logic Problems</li>
-      </ul>
-    </li>
-    <li>Travelling</li>
-    <li>Gardening</li>
-
-    <li>Learning:</li>
+    <h3>Master of Science, Criminology and Leadership</h3>
+    Regis University, Denver, CO
     <ul>
-      <li>Web Development - HTML5 Beginner</li>
-      <li>Python</li>
-      <li>Spanish - Elementary</li>
+      <li>Graute Honors, 4.0 GPA</li>
+      <li>12 hours graduate coursework and research in Leadership Studies</li>
+      <li>
+        Completed 50 page quantitative research study investigating effects of
+        public perception on police motivation
+      </li>
+    </ul>
+
+    <h3>Bachelor of Arts, Psychology</h3>
+    Western Washington University, Bellingham, Washington
+    <ul>
+      <li>Focused in Cognitive and Abnormal Psychology</li>
+      <li>
+        Completed research study on desensitization effects of exposure to
+        violence
+      </li>
+      <li>
+        Additional coursework in English, Literature, Philosophy, and Music
+      </li>
+      <li>Hobbies & Clubs: Pep Band, Symphonic Band, Gaming, Martial Arts</li>
+    </ul>
+
+    <h3>Continuing Education</h3>
+
+    <h4>Google Project Management Professional Certificate, Coursera, March 2022</h4>
+    <ul>
+      <li>
+        <a href="https://coursera.org/share/60ff1a0b88176f71bf4dc1e0282fca68"
+          >Certificate</a
+        >
+      </li>
+      <li>Included over 140 hours of instruction over 6 different courses</li>
+      <li>
+        Coursework qualifies as 100 hours towards PMP & PMI certifications
+      </li>
+      <li>
+        <a
+          href="https://www.coursera.org/professional-certificates/google-project-management"
+          >Course Information</a
+        >
+      </li>
+    </ul>
+    <h4>Washington State Basic Law Enforcement Academy, 2010</h4>
+    <ul>
+      <li>POST Certification</li>
+      <li>720 Hours of coursework and practical application in:</li>
+      <ul>
+        <li>Ethics, Philosophy, and History of Policing</li>
+        <li>Criminal Investigations</li>
+        <li>Criminal Law</li>
+        <li>Criminal Procedures</li>
+        <li>Crisis Intervention Techniques</li>
+        <li>Patrol Tactics</li>
+        <li>Control and Defensive Tactics</li>
+        <li>Traffic Education and Enforcement</li>
+        <li>Community and Problem Based Policing</li>
+        <li>Firearms Safety and Proficiency</li>
+      </ul>
+    </ul>
+
+    <hr />
+
+    <h2>Hobbies & Interests</h2>
+
+    <h3>Gaming</h3>
+    <ul>
+      <li>Video Games</li>
+      <li>Board Games</li>
+      <li>Tabletop Games</li>
+      <li>Sports</li>
+      <li>Puzzles and Logic Problems</li>
+    </ul>
+    <h3>Travelling</h3>
+    <ul>
+      <li>Italy</li>
+      <li>France</li>
+      <li>Spain</li>
+      <li>Portugal</li>
+      <li>Vietnam</li>
+      <li>Africa</li>
+    </ul>
+    <h3>Learning:</h3>
+    <ul>
+      <li>Web Development</li>
+      <li>Spanish</li>
       <li>Personal Finance</li>
-      <li>Real Estate Investing</li>
+      <li>European History</li>
+      <li>Logic & Reasoning</li>
+      <li>Leadership Studies</li>
     </ul>
-  </ol>
-  <hr>
+    <hr />
 
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Leadership</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Critical Thinking</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Problem Solving</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Time Management</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Organization</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Communication</td>
-            <td>★★★★★</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Microsoft Office Suite</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Google Productivity Tools</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Project Management</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Calm Under Pressure</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Emergency Vehicle Operations</td>
-            <td>★★★★★</td>
-          </tr>
-          <tr>
-            <td>Handling Firearms Safely</td>
-            <td>★★★★★</td>
-          </tr>
-      </td>
-  </table>
-  </tr>
-  </table>
-
-  <h4><a href="contact.html">Contact Me</a></h4>
-
-</body>
-
+    <footer>
+      <table align="center">
+        <tr>
+          <td><a href="contact.html">Contact Me</a></td>
+          <td><a href="herr-resume.pdf">Resume</a></td>
+        </tr>
+        
+    </footer>
+  </body>
 </html>
